esqueleto da página

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
  <meta charset="UTF-8"/>
- <title>Componentes Curriculares do Novo Ensino Médio</title>
+ <title>Conselho de Classe Online e Sistema de Avaliação</title>
  <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,14 +12,14 @@
 <body>
  <header>
    <center><img src="Bem vindo.png" alt="" height="" width="98%"> </center>
-   <center><h1>Componentes Curriculares do Novo Ensino Médio</h1></center>
+   <center><h1>Conselho de Classe Online e Sistema de Avaliação</h1></center>
   
    <nav>
      <ul>
-       <li><a href="#linguagens-codigos">Linguagens e Códigos</a></li>
-       <li><a href="#matematica">Matemática</a></li>
-       <li><a href="#ciencias-da-natureza">Ciências da Natureza</a></li>
-       <li><a href="#ciencias-humanas-sociais">Ciências Humanas e Sociais</a></li>
+       <li><a href="#avaliacoes">Avaliações</a></li>
+       <li><a href="#turmas">Turmas</a></li>
+       <li><a href="#alunos">Alunos</a></li>
+       <li><a href="#conselho-geral">Conselho Geral</a></li>
      </ul>
    </nav>
  </header>
