Esqueleto da Página

--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
 <body>
  <header>
    <center><img src="Bem vindo.png" alt="" height="" width="98%"> </center>
-   <center><h1>Conselho de Classe Online e Sistema de Avaliação</h1></center>
+   <center><h1>Meu Negócio</h1></center>
   
    <nav>
      <ul>
-       <li><a href="#avaliacoes">Avaliações</a></li>
-       <li><a href="#turmas">Turmas</a></li>
-       <li><a href="#alunos">Alunos</a></li>
-       <li><a href="#conselho-geral">Conselho Geral</a></li>
+       <li><a href="#projetos">Projetos</a></li>
+       <li><a href="#orcamento">Orçamentos</a></li>
+       <li><a href="#socios">Sócios</a></li>
+       <li><a href="#publicidade">Publicidade</a></li>
      </ul>
    </nav>
  </header>
 
 
  <main>
-   <section id="linguagens-codigos">
-     <h2>Linguagens e Códigos</h2>
-     <p>Neste componente curricular, serão abordadas disciplinas fundamentais para o desenvolvimento da comunicação e construção do conhecimento: Língua Portuguesa, Literatura, Língua Inglesa, Educação Física, Artes e Tecnologias da Informação e Comunicação.</p>
+   <section id="objetivos do site">
+     <h2>Objetivos do Site</h2>
+     <p>Neste site você pode criar seu plano de negócios com todo o auxílio possível durante as aulas de empreendedorismo.</p>
+    <p> Desde o design da imagem da sua marca até os orçamentos necessários você encontra aqui</p>
    </section>
 
 
