--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
  <meta charset="UTF-8"/>
- <title>Conselho de Classe Online e Sistema de Avaliação</title>
+ <title>Meu Negócio</title>
  <link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,9 +33,9 @@
    </section>
 
 
-   <section id="matematica">
-     <h2>Matemática</h2>
-     <p>O componente curricular de Matemática é essencial para o mundo contemporâneo e para a formação de cidadãos capazes de compreender e solucionar problemas. Serão estudados conteúdos como Álgebra, Geometria, Estatística, Probabilidade e Matemática Financeira.</p>
+   <section id="ideias">
+     <h2>Ideias</h2>
+     <p>Dentro do site, você terá alguns exemplos de negócios prontos para usar de base e se inspirar para a criação do seu próprio empreendimento. </p>
    </section>
 
 
